<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="322dp"
        android:id="@+id/illustratio"
        android:orientation="vertical">
        <!-- Illustration -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="322dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/login_icon"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/illustratio"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:background="@drawable/duongvien_goctron">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="1dp"
                        android:layout_marginEnd="1dp"
                        android:gravity="center_horizontal"
                        android:letterSpacing="-0.02"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/text_introduction1"
                        android:textColor="@color/white"
                        android:textSize="36sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.497"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.152" />

                    <TextView
                        android:id="@+id/body_text"
                        android:layout_width="352dp"
                        android:layout_height="47dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="3dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/body_text_introduction1"
                        android:textAppearance="@style/body_text_info"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/text"
                        app:layout_constraintHorizontal_bias="0.439"
                        app:layout_constraintStart_toStartOf="@+id/text"
                        app:layout_constraintTop_toBottomOf="@+id/text"
                        app:layout_constraintVertical_bias="0.234" />

                    <Button
                        android:id="@+id/skip"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="false"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:alpha="0.5"
                        android:background="@android:color/transparent"
                        android:gravity="center_horizontal|center_vertical"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/skip"
                        android:textAppearance="@style/skip"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/body_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.791" />

                    <View
                        android:id="@+id/pagination_dot1"
                        android:layout_width="36dp"
                        android:layout_height="10dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/dot1"
                        app:layout_constraintBottom_toBottomOf="@+id/skip"
                        app:layout_constraintEnd_toStartOf="@+id/next"
                        app:layout_constraintHorizontal_bias="0.478"
                        app:layout_constraintStart_toEndOf="@+id/skip"
                        app:layout_constraintTop_toTopOf="@+id/next" />

                    <Button
                        android:id="@+id/next"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="1dp"
                        android:background="@android:color/transparent"
                        android:lineSpacingExtra="0sp"
                        android:text="@string/next"
                        android:textAppearance="@style/next"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/body_text"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.787" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>