<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_hotelintroductionscreen">

    <View
        android:id="@+id/btn_Back1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.094"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />


    <androidx.cardview.widget.CardView
        android:layout_width="355dp"
        android:layout_height="240dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.851"
        tools:ignore="MissingConstraints"

        card_view:cardPreventCornerOverlap="false">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_gradient">
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Hotel Introduction -->

            <!-- InterContinental Los Angeles -->

            <!-- Vector -->

            <!-- 900 Wilshire Blvd, Los Angeles, CA 90017, USA -->

            <!-- 4-star Hotel -->


            <!-- $ 559 - $ 899 -->

            <TextView
                android:id="@+id/intercontin"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppinsbold"
                android:gravity="top"
                android:text="@string/intercontin"
                android:textAppearance="@style/intercontin1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.327"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewShortDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/intercontin"
                android:drawableLeft="@drawable/location"
                android:drawablePadding="5dp"
                android:text="@string/wilshire_bl"
                android:textAppearance="@style/wilshire_bl"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.195"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/intercontin" />

            <!-- Per Night -->

            <TextView
                android:id="@+id/star_hotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewShortDesc"
                android:drawableLeft="@drawable/star_icon"
                android:drawablePadding="5dp"
                android:text="@string/star_hotel"
                android:textAppearance="@style/star_hotel"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.071"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewShortDesc" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="68dp"
                android:gravity="top"
                android:text="$ 559 - $ 899"
                android:textAppearance="@style/some_id1"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.938"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/per_night"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="88dp"
                android:gravity="top"
                android:text="@string/per_night"
                android:textAppearance="@style/per_night"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.946"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableRight="@drawable/ic_down"
                android:drawablePadding="5dp"
                android:lineSpacingExtra="0sp"
                android:text="Show More"
                android:textAppearance="@style/show_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button"
                app:layout_constraintVertical_bias="0.384" />

            <Button
                android:id="@+id/button"
                android:layout_width="306dp"
                android:layout_height="45dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_btn_home_introduc"
                android:text="Reserve Room"
                android:textAppearance="@style/reserve_roo"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.489"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/star_hotel">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>